--- a/Tp1/src/theme.css
+++ b/Tp1/src/theme.css
@@ -12,13 +12,6 @@ input.button{
     border: 2px solid lightseagreen ;
 }
 
-input{
-    color: dimgrey;
-    border-top: 0 ;
-    border-left: 0;
-    border-right: 0;
-  }
-
 h1, h2, h3, h4, h5, h6{
     font-family: Verdana, sans-serif;
     color: darkslategrey;
@@ -30,8 +23,8 @@ h1, h2, h3, h4, h5, h6{
     margin-bottom: 5px;
 }
 
-.definitionsList{
-
+#head{
+    text-align: center;
 }
 
 
