--- a/Tp1/src/theme.css
+++ b/Tp1/src/theme.css
@@ -23,10 +23,13 @@ h1, h2, h3, h4, h5, h6{
     margin-bottom: 5px;
 }
 
-#head{
+#title-container{
     text-align: center;
 }
 
+footer{
+    text-align: center;
+}
 
 
 a:any-link { color: black; }
