--- a/Tp1/src/style.css
+++ b/Tp1/src/style.css
@@ -12,9 +12,40 @@ input{
     border-top: 3px ;
     border-left: 0;
     border-right: 0;
+    border-radius: 2px;
+
+}
+.dialog{
+    width: 90%;
+    border-radius: 10px;
+    border-width: 1px;
+    text-align-last: center;
+    background-color: whitesmoke;
+    border-color: slategrey;
+
+}
+
+.dialog-form-container{
 
 }
 
 tr:hover {
     background-color: #f5f5f5;
+}
+
+.user-dialog{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.dialog-button{
+    position: center;
+    border-radius: 15px;
+    color: gray ;
+    border: 2px solid lightseagreen ;
+}
+
+input.dialog{
+    background-color: whitesmoke;
 }
